[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/sprites/player/player_blue.png" type="Texture" id=1]
[ext_resource path="res://scripts/Player.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7, 7 )

[node name="Player" type="Sprite"]
texture = ExtResource( 1 )
script = ExtResource( 2 )

[node name="HitArea" type="Area2D" parent="." groups=[
"player",
]]

[node name="Shape" type="CollisionShape2D" parent="HitArea"]
visible = false
shape = SubResource( 1 )

[node name="ReloadTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="PowerTimer" type="Timer" parent="."]
one_shot = true
[connection signal="area_entered" from="HitArea" to="." method="_on_HitArea_area_entered"]
[connection signal="timeout" from="ReloadTimer" to="." method="_on_ReloadTimer_timeout"]
[connection signal="timeout" from="PowerTimer" to="." method="_on_PowerTimer_timeout"]
